[project]
name = "AQI-Image-Classification-2026"
version = "0.1.0"
description = "Image-based AQI classification for the 2026 Deep Learning Kaggle competition."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=1.0",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.0",
    "pillow>=10.0",
    "scikit-learn>=1.5",
    "torch>=2.5",
    "torchvision>=0.20",
]

[project.scripts]
aqi-download = "download_data:main"
aqi-ensemble = "ensemble:main"
aqi-ensemble-three = "ensemble_three:main"
aqi-train = "main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["download_data", "ensemble", "ensemble_three", "main"]
